@@ -1,3 +1,7 @@
+2004-09-14 Seiichi SATO <ssato@sh.rim.or.jp>
+
+	* tool/mlconfig/mc_im.c: cleanups.
+
 2004-09-13 Seiichi SATO <ssato@sh.rim.or.jp>
 
 	* tool/mlconfig/mc_sb_view.c (has_rc_file): new function to check
